--- a/games/monkey/text/eng/text.yaml
+++ b/games/monkey/text/eng/text.yaml
@@ -282,6 +282,89 @@ dialogues:
     overhere: "I'm over here."
     53: "Thranwook."
     54: "Thrumwink."
+  important_looking_pirates:
+    1: What be ye wantin', boy?
+    2: I mean to kill you all!
+    3: I want to be a pirate.
+    4: I want to be a fireman.
+    5: Get lost, boy, you bother us.
+    6: So what?
+    7: Why bother us?
+    8: Hey, don't forget we're short on help because of this whole LeChuck thing.
+    9: So?
+    10: So, no pirates means no swag, and no swag means no grog, and we're getting dangerously low on grog...
+    11: Hmm...
+    12: Do you have any special skills?
+    13: I can hold my breath for ten minutes!
+    14: Well...
+    15: All right, but you don't become a pirate just by ASKING.
+    16: You'll have to go through...
+    17: The three trials!
+    18: Er...
+    19: What three trials are those?
+    20: There are three trials every pirate must pass.
+    21: You must master the sword
+    22: ...and the art of thievery...
+    23: ...and the quest.
+    24: The what?
+    25: Treasure huntin', ya sea urchin!
+    26: Right.
+    27: "You must prove yourself in each of these three areas:"
+    28: swordplay, thievery, and, er, treasure huntery;
+    29: then return with proof that you've done it.
+    30: And then ye must drink grog with us!!
+    31: GROG!!!
+    32: "Tell me more about mastering the sword.",
+    33: "Tell me more about mastering the art of thievery.",
+    34: "Tell me more about treasure hunting.",
+    35: "You're a bunch of foul-smelling, grog-swilling pigs!",
+    36: "What's in that grog stuff, anyway?",
+    37: "I'll just be running along now.",
+    38: "Leave us to our grog.",
+    39: "Come back later and tell us how ye're doing.",
+    40: "Well, if it isn't the boy who wants to be a pirate.",
+    41: "How do you fare on your quests?",
+    42: "First, get ye a sword.",
+    43: "You must seek out and defeat the Sword Master.",
+    44: "Someone in town can probably direct you.",
+    45: "Oh!",
+    46: "You'll want to find someone to train you first.",
+    47: "Ha ha.",
+    48: "Imagine trying to take on the Sword Master without any training!",
+    49: "Har har har",
+    50: "Tell me again about mastering the sword.",
+    51: "And get yourself trained first.",
+    52: "We want you to procure a small item for us...",
+    53: "The Idol of Many Hands...",
+    54: "...in the Governor's mansion!",
+    55: "The Governor keeps the Idol o' Many Hands in a display case in the mansion outside of town.",
+    56: "You'll have to get past the guards, naturally.",
+    57: "The tricky part will be getting past the dogs outside.",
+    58: "They're a particularly vicious breed...",
+    59: "...you might be able to drug them or something.",
+    60: "Tell me again about pilfering the idol.",
+    61: "Legend has it that there's a treasure buried here on the island...",
+    62: "All you must do is find the Legendary Lost Treasure of Mêlée Island and bring it back here.",
+    63: "Should I have a map or something?",
+    64: "You can hardly expect to find a treasure without a map!",
+    65: "...and don't forget:",
+    66: "X marks the spot!",
+    67: "Tell me again about the Lost Treasure.",
+    68: "To be a pirate ye must also be a foul-smelling, grog-swilling pig.",
+    69: "Grog is a secret mixture which contains one or more of the following:",
+    70: "kerosene",
+    71: "propylene glycol",
+    72: "artificial sweeteners",
+    73: "sulphuric acid",
+    74: "rum",
+    75: "acetone",
+    76: "red dye #2",
+    77: "scumm",
+    78: "axle grease",
+    79: "battery acid",
+    80: "and/or pepperoni",
+    81: "As you can probably imagine, it's one of the most caustic, volatile substances known to man.",
+    82: "The stuff eats right through these mugs and the cook is losing a fortune replacing them."
 lines:
   1: "Re-elect Governor Marley."
   2: "\"When there's only one candidate, there's only one choice.\""
