--- a/games/monkey/text/fra/text.yaml
+++ b/games/monkey/text/fra/text.yaml
@@ -282,6 +282,53 @@ dialogues:
     overhere: "I'm over here."
     53: "Thranwook."
     54: "Thrumwink."
+  important_looking_pirates:
+    1: "Qu'est-ce que tu veux mon garçon?"
+    2: "Je veux tous vous tuer!"
+    3: "Je veux devenir pirate."
+    4: "Je veux devenir pompier."
+    5: "Décampe gamin, tu nous déranges."
+    6: "Et alors?"
+    7: "Pourquoi tu nous déranges avec ça?"
+    8: "N'oubliez pas que nous manquons d'hommes à cause de cette histoire de LeChuck."
+    9: "Et alors?"
+    10: "C'est simple, sans pirate on a pas de butin, et sans butin pas de grog, et notre réserve diminue dangereusement."
+    11: "Hum..."
+    12: "Qu'est-ce que tu sais faire au juste?"
+    13: "Je peux retenir mon souffle pendant dix minutes!"
+    14: "Pas mal..."
+    15: "Très bien, mais il ne suffit pas de DEMANDER pour devenir pirate."
+    16: "Tu dois passer..."
+    17: "Les trois épreuves!"
+    18: "Ah..."
+    19: "Quelles sont ces trois épreuves?"
+    20: "Pour devenir pirate tu dois réussir les trois épreuves."
+    21: "Tu dois maîtriser l'usage de l'épée..."
+    22: "...et apprendre l'art du vol..."
+    23: "...et de la chasse."
+    24: "Ah oui?"
+    25: "La chasse au trésor, espèce d'oursin!"
+    26: "Ah d'accord."
+    27: "Tu dois faire tes preuves dans chacune de ces disciplines."
+    28: "l'escrime, le vol, et, hum, la chasse au trésor;"
+    29: "et ramène une preuve à ton retour."
+    30: "Et ensuite tu viens boire un grog avec nous!!"
+    31: "GROG!!!"
+    32: "Dites-moi comment maîtriser l'usage de l'épée."
+    33: "Dites-moi comment apprendre l'art du vol."
+    34: "Dites-moi comment faire la chasse au trésor."
+    35: "Vous n'êtes que des buveurs de rhum à la mauvaise haleine!"
+    36: "Au fait, qu'est-ce que vous mettez dans ce grog?"
+    37: "Bon et bien je dois y aller maintenant."
+
+    42: "Tout d'abord trouve une épée"
+    43: "Ensuite va voir la Reine du Sabre pour la vaincre"
+    44: "Quelqu'un en ville pourra sans doute t'indiquer le chemin à prendre"
+    45: "Ah!"
+    46: "D'abord tu dois trouver quelqu'un avec qui t'entraîner"
+    47: "Ha ha."
+    48: "Je t'imagine dé jà affronter la Reine du Sabre sans aucun entraînement!"
+    49: "Ha Ha Ha"
 lines:
   1: "Réélisez le Gouverneur Marley."
   2: "\"Quand il n'y a qu'un seul candidat, il n'y a qu'un seul choix.\""
