--- a/games/monkey/assets/01.yaml
+++ b/games/monkey/assets/01.yaml
@@ -176,35 +176,35 @@ scummbar.mancomb:
   type: 'asset.sprite'
   animations:
     idle_1:
-      frames:
-        - [241,68,33,40]
+      elements:
+        - quads: [[241,68,33,40]]
     idle_2:
-      frames:
-        - [277,68,36,39,1,-1]
+      elements:
+        - quads: [[277,68,36,39,1,-1]]
 scummbar.estevan:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
   animations:
     idle_1:
-      frames:
-        - [318,76,35,27]
+      elements:
+        - quads: [[318,76,35,27]]
     idle_2:
       loop: false
-      frames:
-        - [355,76,39,27]
-        - [396,76,37,27]
+      elements:
+        - quads: [[355,76,39,27]]
+        - quads: [[396,76,37,27]]
 scummbar.loom:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
   animations:
     idle_1:
-      frames:
-        - [221,457,29,38]
+      elements:
+        - quads: [[221,457,29,38]]
     idle_2:
       loop: false
-      frames:
-        - [252,458,29,37]
-        - [283,458,29,37]
+      elements:
+        - quads: [[252,458,29,37]]
+        - quads: [[283,458,29,37]]
 scummbar.fireplace:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
@@ -385,15 +385,12 @@ mancomb.mancomb:
   sheet: 'gfx/faces.png'
   type: 'asset.sprite'
   animations:
-    idle_e:
-      frames:
-        - [80,0,78,78]
-    talk_e:
-      frames:
-        - [80,0,78,78]
+    idle_s:
+      elements:
+        - quads: [[80,0,78,78]]
     smile:
-      frames:
-        - [0,0,78,78]
+      elements:
+        - quads: [[0,0,78,78]]
 citizen:
   sheet: 'gfx/sprites/sprites1.png'
   type: 'asset.sprite'
